cleanup + NPS + shm update
Put the NPS on the shared memory structure,
added await to shm

started a structure conducive to Makefile compliance

--- a/devices/TTM/TTM.ini
+++ b/devices/TTM/TTM.ini
@@ -6,7 +6,7 @@
 # TTM IP Address
 IP_Address: 10.136.1.45 
 # Default location to store TTM log file
-log_path: /kroot/src/kss/nirspec/nsfiu/LOGS/TTM.log
+debug_log: /kroot/src/kss/nirspec/nsfiu/LOGS/TTM.log
 
 [Environment]
 # command to start control script
