--- a/devices/TTM/TTM.ini
+++ b/devices/TTM/TTM.ini
@@ -34,22 +34,22 @@ Shm_D: /tmp/TTMD.im.shm
 # Dimension of the shared memories
 [Shm_dim]
 # Dimension of the shared memory who contains the data
-Shm_D_dim: 5.
+Shm_D_dim: 5
 # Dimension of the shared memory who contains the parameters
-Shm_P_dim: 5.
+Shm_P_dim: 5
 
 # Position of the parameters contained the sheared memory
 [Shm_D_Content]
 # TTM current position in direction # 1
-pos_1: 0.
+pos_1: 0
 # TTM current position in direction # 2
-pos_2: 1.
+pos_2: 1
 # Time when current position required
-cur_t: 2.
+cur_t: 2
 # Stage status
-status: 3.
+status: 3
 # Error message
-error: 4.
+error: 4
 
 
 # Initial value of the parameters contained the sheared memory
@@ -69,15 +69,15 @@ error: 0.
 # Position of the parameters contained the sheared memory
 [Shm_P_Content]
 # TTM wanted position in direction # 1
-pos_1: 0.
+pos_1: 0
 # TTM wanted position in direction # 2
-pos_2: 1.
+pos_2: 1
 # Close loop status for axis 1
-svo_1: 2.
+svo_1: 2
 # Close loop status for axis 2
-svo_2: 3.
+svo_2: 3
 # Stage status
-status: 4.
+status: 4
 
 
 # Initial values of the parameters contained in the sheared memory
