TTM.ini formatting
broke a long line into 2

--- a/devices/TTM/TTM.ini
+++ b/devices/TTM/TTM.ini
@@ -60,7 +60,8 @@ pos_1: 0.
 pos_2: 0.
 # Float: in second (epoch time)
 cur_t: 0.
-#2 = moving // 1 = all (stage + script) on // 0 = Stage off // -1 = Script dead // -2 = all off
+# 2 = moving // 1 = all (stage + script) on // 0 = Stage off
+#// -1 = Script dead // -2 = all off
 status: 1.
 # 0 = None // 1 = MotionRange // 2 = LoopOpen
 error: 0.
