--- a/devices/NPS/NPS.ini
+++ b/devices/NPS/NPS.ini
@@ -1,70 +1,57 @@
+##
 #
-# KPIC FIU Network Power Switch initialization file
+# Pulizzi Configuration File
+#  
+# Format:
+#
+# <TAB>  (creates a new tab)
+# PulizziName
+# PulizziModel 	: (IPC32XX | IPC34XX)
+# NetAddress  Port
+# [ButtonName1]
+# [ButtonState1] 	: (enabled | disabled)
+# [ButtonDescription1]
+# ...
+# [ButtonNameX]
+# [ButtonStateX]	: (enabled | disabled)
+# [ButtonDescriptionX]
 #
 
 
-#Info about the NPS
-[Device_Info]
-name: NFIU
-model: IPC34XX
-address: k2consoles-8
-port: 2004
+<TAB>
+NFIU
+IPC34XX
+k2consoles-8 2004
 
-#list of devices with their ports
-#
-#NOTE: names should be the same as the files controlling the device
-#
-[Ports]
-#Tracking camera (CRED2)
-TrackCam:   1
-TC_mode:    2
-FEU_CF_src: 3
-FIU_CF_src: 4
-#port 5 empty
-#port 6 empty
-#Arduino environmental sensors
-Metrology:  7
-#Tip-tilt mirror
-TTM:        8
+Tracking Camera
+enabled
+C-RED2 camera (TrackCam kill)
 
-#names to display to user indexed by port
-[Names]
-1: Tracking_camera
-2: ???_TC_mode
-3: ???_FEU_CF_src
-4: ???_FIU_CF_src
-7: Arduino_metrology_system
-8: FIU_tip-tilt_mirror
+TC mode stage
+enabled
+Conex controller
 
-#path to NPS shms
-[Shm_path]
-Shm_D: /tmp/NPSD.im.shm
-Shm_P: /tmp/NPSP.im.shm
+FEU CF sources
+enabled
+mid-IR light source
 
-#size of shms
-[Shm_dim]
-Shm_D_dim:  6
-Shm_P_dim:  6
+FIU CF source
+enabled
+1550 nm laser
 
-#indices for both shared memories
-#
-#NOTE: names as above
-#
-[Shm_indices]
-TrackCam:   0
-TC_mode:    1
-FEU_CF_src: 2
-FIU_CF_src: 3
-Metrology:  4
-TTM:        5
+Not connected
+enabled
+Temporary FEU
 
-#Values for shared memories are as follows:
-#Shm_D: 
-#       1 = on  |  0 = off
-#Shm_P:
-#       1 = listening  |  0 = not  |  -1 = config not found
-#
-#Note that the state shared memory values do not reflect
-#the desired state of the device. Instead, if the value is
-#1, the relevant device's command shared memory will be read
-#for the desired device state.
+Not connected
+enabled
+Labjack + 2 photodiodes
+
+Env. sensors
+enabled
+Environmental monitoring
+
+FIU TTM
+enabled
+E-727 Tip Tilt mirror controller (TTM open)
+
