--- a/devices/FIU_TTM/FIU_TTM.ini
+++ b/devices/FIU_TTM/FIU_TTM.ini
@@ -25,46 +25,42 @@ min_2: 0.
 max_2: 10000.
 
 #Path to the shared memories
-[Shm_paths]
+[Shm_Info]
+#for each of the following, the first element is the path to the shared 
+#memory, the second is the number of semaphores that shared memory has,
+#the third is the (numpy) data type in the shared memory
+
+#NOTE: float16 might work, need to check precision of encoder
 #Shared memory to store the current positiom
-Pos_D:  /tmp/FIU_TTM/POSD.im.shm
+Pos_D:  /tmp/FIU_TTM/POSD.im.shm, 1, float32
+#NOTE: float16 might work, need to check precision of encoder
 #Shared memory to store the target position
-Pos_P:  /tmp/FIU_TTM/POSP.im.shm
+Pos_P:  /tmp/FIU_TTM/POSP.im.shm, 1, float32
 #Shared memory to store the current status
-Stat_D: /tmp/FIU_TTM/STATUSD.im.shm
+Stat_D: /tmp/FIU_TTM/STATUSD.im.shm, 1, int8
 #Shared memory to store the target status
-Stat_P: /tmp/FIU_TTM/STATUSP.im.shm
+Stat_P: /tmp/FIU_TTM/STATUSP.im.shm, 1, bool
 #Shared memory to store any error that arises
-Error:  /tmp/FIU_TTM/ERROR.im.shm
+Error:  /tmp/FIU_TTM/ERROR.im.shm, 1, uint8
 #Shared memory to store the target servo state
 # (can also assume this is the current servo state)
-Svos:   /tmp/FIU_TTM/SVOS.im.shm
+Svos:   /tmp/FIU_TTM/SVOS.im.shm, 1, bool
 
-# Dimension of the shared memories
-[Shm_dim]
-#index 0 = axis 1, index 1 = axis 2
-Pos_D:  3
-#index 0 = axis 1, index 1 = axis 2
-Pos_P:  2
-Stat_D: 1
-Stat_P: 1
-Error:  1
-#index 0 = axis 1, index 1 = axis 2
-Svos:   2
-
+#To get the dimension of a shared memory, look here and spit by ","
 [Shm_Init]
 #float: pos, pos, time
 #Nonsense values that will be overwritten
-Pos_D:  -5000.
+Pos_D:  -5000., -5000., -5000.
 #float: pos, pos
 #The center of the TTM's range
-Pos_P:  5000.
+Pos_P:  5000., 5000.
 #int8: 2 = moving // 1 = all (stage & script) on // 0 = stage off
 #       -1 = script dead // -2 = all off 
-Stat_D: 0
+#NOTE: a starting value of 2 is picked to force the control script to update
+Stat_D: 2
 #bool: 1 = device on // 0 = device off
 Stat_P: 1
-#uint8: 0 = None // 1 = MotionRange
+#uint8: 0 = None // 1 = MotionRange // 2 = LoopOpen
 Error:  0
 #bool: whether the servo is on
-Svos:   True
+Svos:   1, 1
