--- a/devices/FIU_TTM/FIU_TTM.ini
+++ b/devices/FIU_TTM/FIU_TTM.ini
@@ -24,7 +24,6 @@ min_2: 0.
 #Axis 2 higher limit
 max_2: 10000.
 
-#Path to the shared memories
 [Shm_Info]
 #for each of the following, the first element is the path to the shared 
 #memory, the second is the number of semaphores that shared memory has,
@@ -48,9 +47,9 @@ Svos:   /tmp/FIU_TTM/SVOS.im.shm, 1, bool
 
 #To get the dimension of a shared memory, look here and spit by ","
 [Shm_Init]
-#float: pos, pos, time
+#float: pos, pos
 #Nonsense values that will be overwritten
-Pos_D:  -5000., -5000., -5000.
+Pos_D:  -5000., -5000.
 #float: pos, pos
 #The center of the TTM's range
 Pos_P:  5000., 5000.
