--- a/devices/FIU_TTM/FIU_TTM.ini
+++ b/devices/FIU_TTM/FIU_TTM.ini
@@ -1,18 +1,22 @@
 #
 # KPIC FIU PI Tip-Tilt mirror initialization file
 #
+#
+# WARNING: the lack of spaces between commas is a functional choice. If spaces
+# are added, scripts may break (as no strip is applied to this data
 
 [Communication]
 #TTM IP Address
-IP_Address: 10.136.1.45 
+IP_Address: 10.136.1.45
 #Default location to store TTM log file
-debug_log: /kroot/src/kss/nirspec/nsfiu/LOGS/FIU_TTM.log
+debug_log:  /nfiudata/LOGS/FIU_TTM.log
 
 [Environment]
 #Command to start control script
-start_command: tmux new -d -s FIU_TTM kpython3 FIU_TTM_Control
+#to use with Popen: split by "|" and then split beginning by " "
+start_command: tmux new -d -s FIU_TTM|kpython3 FIU_TTM_Control.py
 #Command to end control script
-end_command: tmux kill-ses -t FIU_TTM
+end_command:   tmux kill-ses -t FIU_TTM
 
 [TTM_Limits]
 #Axis 1 lower limit
@@ -26,40 +30,42 @@ max_2: 10000.
 
 [Shm_Info]
 #for each of the following, the first element is the path to the shared 
-#memory, the second is the number of semaphores that shared memory has,
-#the third is the (numpy) data type in the shared memory
+#  memory and the second is the (numpy) data type in the shared memory
+#
+#The directory path below is made in FIU_TTM_Control, so change that file if
+#  changing location of shms.
 
 #NOTE: float16 might work, need to check precision of encoder
 #Shared memory to store the current positiom
-Pos_D:  /tmp/FIU_TTM/POSD.im.shm, 1, float32
+Pos_D:  /tmp/FIU_TTM/POSD.im.shm,float32
 #NOTE: float16 might work, need to check precision of encoder
 #Shared memory to store the target position
-Pos_P:  /tmp/FIU_TTM/POSP.im.shm, 1, float32
+Pos_P:  /tmp/FIU_TTM/POSP.im.shm,float32
 #Shared memory to store the current status
-Stat_D: /tmp/FIU_TTM/STATUSD.im.shm, 1, int8
+Stat_D: /tmp/FIU_TTM/STATUSD.im.shm,int8
 #Shared memory to store the target status
-Stat_P: /tmp/FIU_TTM/STATUSP.im.shm, 1, bool
+Stat_P: /tmp/FIU_TTM/STATUSP.im.shm,int8
 #Shared memory to store any error that arises
-Error:  /tmp/FIU_TTM/ERROR.im.shm, 1, uint8
+Error:  /tmp/FIU_TTM/ERROR.im.shm,uint8
 #Shared memory to store the target servo state
 # (can also assume this is the current servo state)
-Svos:   /tmp/FIU_TTM/SVOS.im.shm, 1, bool
+Svos:   /tmp/FIU_TTM/SVOS.im.shm,int8
 
 #To get the dimension of a shared memory, look here and spit by ","
 [Shm_Init]
 #float: pos, pos
 #Nonsense values that will be overwritten
-Pos_D:  -5000., -5000.
+Pos_D:  -5000.,-5000.
 #float: pos, pos
 #The center of the TTM's range
-Pos_P:  5000., 5000.
+Pos_P:  5000.,5000.
 #int8: 2 = moving // 1 = all (stage & script) on // 0 = stage off
 #       -1 = script dead // -2 = all off 
 #NOTE: a starting value of 2 is picked to force the control script to update
 Stat_D: 2
 #bool: 1 = device on // 0 = device off
 Stat_P: 1
-#uint8: 0 = None // 1 = MotionRange // 2 = LoopOpen
+#uint8: 0 = None // 1 = MovementRange // 2 = LoopOpen // 3 = StageOff
 Error:  0
 #bool: whether the servo is on
-Svos:   1, 1
+Svos:   1,1
