--- a/devices/NPS/NPS.ini
+++ b/devices/NPS/NPS.ini
@@ -1,57 +1,29 @@
-##
 #
-# Pulizzi Configuration File
-#  
-# Format:
-#
-# <TAB>  (creates a new tab)
-# PulizziName
-# PulizziModel 	: (IPC32XX | IPC34XX)
-# NetAddress  Port
-# [ButtonName1]
-# [ButtonState1] 	: (enabled | disabled)
-# [ButtonDescription1]
-# ...
-# [ButtonNameX]
-# [ButtonStateX]	: (enabled | disabled)
-# [ButtonDescriptionX]
+# NPS Configuration File
 #
 
+[Device_Info]
+computer:   NFIU
+model:      IPC34XX
 
-<TAB>
-NFIU
-IPC34XX
-k2consoles-8 2004
+[Communication]
+address:    k2consoles-8
+port:       2004
 
-Tracking Camera
-enabled
-C-RED2 camera (TrackCam kill)
-
-TC mode stage
-enabled
-Conex controller
-
-FEU CF sources
-enabled
-mid-IR light source
-
-FIU CF source
-enabled
-1550 nm laser
-
-Not connected
-enabled
-Temporary FEU
-
-Not connected
-enabled
-Labjack + 2 photodiodes
-
-Env. sensors
-enabled
-Environmental monitoring
-
-FIU TTM
-enabled
-E-727 Tip Tilt mirror controller (TTM open)
-
+[Ports]
+# C-RED2 camera
+1: Tracking Camera
+# Conex controller
+2: TC mode stage
+# mid-IR light source
+3: FEU CF source
+# 1550 nm laser
+4: FIU CF source
+# Temporary FEU 
+5: Not connected
+# Labjack + 2 photodiodes
+6: Not connected
+# Environmental monitoring
+7: Env. sensors
+# E-727 Tip Tilt mirror controller
+8: FIU TTM
