--- a/devices/FIU_TTM/FIU_TTM.ini
+++ b/devices/FIU_TTM/FIU_TTM.ini
@@ -14,7 +14,7 @@ debug_log:  /nfiudata/LOGS/FIU_TTM.log
 [Environment]
 #Command to start control script
 #to use with Popen: split by "|" and then split beginning by " "
-start_command: tmux new -d -s FIU_TTM|kpython3 FIU_TTM_Control.py
+start_command: tmux new -d -s FIU_TTM|FIU_TTM_Control
 #Command to end control script
 end_command:   tmux kill-ses -t FIU_TTM
 
