--- a/devices/FIU_TTM/FIU_TTM.ini
+++ b/devices/FIU_TTM/FIU_TTM.ini
@@ -3,69 +3,67 @@
 #
 #
 # WARNING: the lack of spaces between commas is a functional choice. If spaces
-# are added, scripts may break (as no strip is applied to this data
+# are added, scripts may break (as no strip is applied to this data)
 
 [Communication]
-#TTM IP Address
-IP_Address: 10.136.1.45
-#Default location to store TTM log file
+# Default location to store TTM log file
 debug_log:  /nfiudata/LOGS/FIU_TTM.log
 
 [Environment]
-#Command to start control script
-#to use with Popen: split by "|" and then split beginning by " "
+# Command to start control script
+# to use with Popen: split by "|" and then split beginning by " "
 start_command: tmux new -d -s FIU_TTM|FIU_TTM_Control
-#Command to end control script
+# Command to end control script
 end_command:   tmux kill-ses -t FIU_TTM
 
 [TTM_Limits]
-#Axis 1 lower limit
+# Axis 1 lower limit
 min_1: 0.
-#Axis 1 higher limit
+# Axis 1 higher limit
 max_1: 10000.
-#Axis 2 lower limit
+# Axis 2 lower limit
 min_2: 0.
-#Axis 2 higher limit
+# Axis 2 higher limit
 max_2: 10000.
 
 [Shm_Info]
-#for each of the following, the first element is the path to the shared 
-#  memory and the second is the (numpy) data type in the shared memory
+# for each of the following, the first element is the path to the shared 
+#   memory and the second is the (numpy) data type in the shared memory
 #
-#The directory path below is made in FIU_TTM_Control, so change that file if
-#  changing location of shms.
+# The directory path below is made in FIU_TTM_Control, so change that file if
+#   changing location of shms.
 
-#NOTE: float16 might work, need to check precision of encoder
-#Shared memory to store the current positiom
+# NOTE: float16 might work, need to check precision of encoder
+# Shared memory to store the current positiom
 Pos_D:  /tmp/FIU_TTM/POSD.im.shm,float32
-#NOTE: float16 might work, need to check precision of encoder
-#Shared memory to store the target position
+# NOTE: float16 might work, need to check precision of encoder
+# Shared memory to store the target position
 Pos_P:  /tmp/FIU_TTM/POSP.im.shm,float32
-#Shared memory to store the current status
+# Shared memory to store the current status
 Stat_D: /tmp/FIU_TTM/STATUSD.im.shm,int8
-#Shared memory to store the target status
+# Shared memory to store the target status
 Stat_P: /tmp/FIU_TTM/STATUSP.im.shm,int8
-#Shared memory to store any error that arises
+# Shared memory to store any error that arises
 Error:  /tmp/FIU_TTM/ERROR.im.shm,uint8
-#Shared memory to store the target servo state
-# (can also assume this is the current servo state)
+# Shared memory to store the target servo state
+#  (can also assume this is the current servo state)
 Svos:   /tmp/FIU_TTM/SVOS.im.shm,int8
 
-#To get the dimension of a shared memory, look here and spit by ","
+# To get the size of a shared memory, look here and split by ","
 [Shm_Init]
-#float: pos, pos
-#Nonsense values that will be overwritten
+# pos, pos
+# Nonsense values that will be overwritten
 Pos_D:  -5000.,-5000.
-#float: pos, pos
-#The center of the TTM's range
+# pos, pos
+# The center of the TTM's range
 Pos_P:  5000.,5000.
-#int8: 2 = moving // 1 = all (stage & script) on // 0 = stage off
-#       -1 = script dead // -2 = all off 
-#NOTE: a starting value of 2 is picked to force the control script to update
+# 2 = moving // 1 = all (stage & script) on // 0 = stage off
+#    -1 = script dead // -2 = all off 
+# NOTE: a starting value of 2 is picked to force the control script to update
 Stat_D: 2
-#bool: 1 = device on // 0 = device off
+# 1 = device on // 0 = device off
 Stat_P: 1
-#uint8: 0 = None // 1 = MovementRange // 2 = LoopOpen // 3 = StageOff
+# 0 = None // 1 = MovementRange // 2 = LoopOpen // 3 = StageOff
 Error:  0
-#bool: whether the servo is on
+# whether the servo is on
 Svos:   1,1
