--- a/devices/Mode_Change/Mode_Change.ini
+++ b/devices/Mode_Change/Mode_Change.ini
@@ -20,9 +20,9 @@ end_command:   tmux kill-ses -t Mode_Change
 # position for Pupil viewing mode
 Pupil:   0
 # position for Focal viewing mode
-Focal:   12.5
+Focal:   25.4
 # position for Zernike viewing mode
-Zernike: 
+Zernike: 6.1 
 
 [Limits]
 # Axis 1 lower limit
