--- a/devices/Track_Cam/Track_Cam.ini
+++ b/devices/Track_Cam/Track_Cam.ini
@@ -18,8 +18,7 @@ end_command:   tmux kill-ses -t Track_Cam
 
 [Shm_Info]
 # for each of the following, the first element is the path to the shared 
-#   memory, the second is the data type in the shared memory, and the third is
-#   the maximum number of elements in the shared memory
+#   memory, the second is the data type in the shared memory
 
 # Shared memory to store the current state of the Tracking Camera
 #
@@ -28,60 +27,60 @@ end_command:   tmux kill-ses -t Track_Cam
 #   bit 1: camera status (1 = on and read, 0 = off or starting up)
 #   bit 2: fan status    (1 = on auto, 0 = off)
 #   bit 3: LED status    (1 = on, 0 = off)
-Stat_D: /tmp/Track_Cam/DSTAT.im.shm,uint8,1
+Stat_D: /tmp/Track_Cam/DSTAT.im.shm,uint8
 
 # Shared memory to store any errors
-Error:  /tmp/Track_Cam/ERROR.im.shm,uint8,1
+Error:  /tmp/Track_Cam/ERROR.im.shm,uint8
 
-# Shared memory to store the CRED2 image (max size is 640X512
-IMG:    /tmp/Track_Cam/IMG.im.shm,uint16,327680
+# Shared memory to store the CRED2 image (max size is 640X512)
+IMG:    /tmp/Track_Cam/IMG.im.shm,uint16
 
 # Shared memory to store the current cropping window of the CRED2
 #
 # order is left bound, right bound, upper bound, lower bound
 #   -1, -1, -1, -1 means subwindowing is off
-Crop_D: /tmp/Track_Cam/DCROP.im.shm,uint16,4
+Crop_D: /tmp/Track_Cam/DCROP.im.shm,uint16
 
 # Shared memory to store the current number of non-destructive reads
 #
 # 0 means that NDR mode is off
-NDR_D:  /tmp/Track_Cam/DNDR.im.shm,uint8,1
+NDR_D:  /tmp/Track_Cam/DNDR.im.shm,uint8
 
 # Shared memory to store the current frames per second
-FPS_D:  /tmp/Track_Cam/DFPS.im.shm,double,1
+FPS_D:  /tmp/Track_Cam/DFPS.im.shm,double
 
 # Shared memory to store the current exposure time
-Exp_D:  /tmp/Track_Cam/DEXP.im.shm,double,1
+Exp_D:  /tmp/Track_Cam/DEXP.im.shm,double
 
 # Shared memory to store all temperatures of the camera
 #
 # Order is: mother board, front end, power board, sensor, peltier, heatsink
-Temp_D: /tmp/Track_Cam/DTEMP.im.shm,double,6
+Temp_D: /tmp/Track_Cam/DTEMP.im.shm,double
 
 # Shared memory to store the target state of the Tracking Camera
 #
 # information is communicated in bits as in Stat_D
-Stat_P: /tmp/Track_Cam/PSTAT.im.shm,uint8,1
+Stat_P: /tmp/Track_Cam/PSTAT.im.shm,uint8
 
 # Shared memory to store the target cropping window of the CRED2
 #
 # Order is as Crop_D. Maximum window is 0, 640, 0, 512. 
 #   Any window that doesn't make sense will be ignored. 
 #   If -1, -1, -1, -1 is sent, subwindowing will be turned off
-Crop_P: /tmp/Track_Cam/PCROP.im.shm,uint16,4
+Crop_P: /tmp/Track_Cam/PCROP.im.shm,uint16
 
 # Shared memory to store the target number of non-destructive reads
 #
 # Sending 0 will turn NDR mode off
-NDR_P:  /tmp/Track_Cam/PNDR.im.shm,uint8,1
+NDR_P:  /tmp/Track_Cam/PNDR.im.shm,uint8
 
 # Shared memory to store the target frames per second
-FPS_P:  /tmp/Track_Cam/PFPS.im.shm,double,1
+FPS_P:  /tmp/Track_Cam/PFPS.im.shm,double
 
 # Shared memory to store the target exposure time
 #
 # An exposure of greater than 1/fps will be ignored. 
-Exp_P:  /tmp/Track_Cam/PEXP.im.shm,double,1
+Exp_P:  /tmp/Track_Cam/PEXP.im.shm,double
 
 # Shared memory to store the target temperature of the snake
-Temp_P: /tmp/Track_Cam/PTEMP.im.shm,double,1
+Temp_P: /tmp/Track_Cam/PTEMP.im.shm,double
