--- a/devices/Track_Cam/Track_Cam.ini
+++ b/devices/Track_Cam/Track_Cam.ini
@@ -82,5 +82,8 @@ FPS_P:  /tmp/Track_Cam/PFPS.im.shm,double
 # An exposure of greater than 1/fps will be ignored. 
 Exp_P:  /tmp/Track_Cam/PEXP.im.shm,double
 
-# Shared memory to store the target temperature of the snake
+# Shared memory to store the target temperature of the snake, as well as the
+#   rate at which Temp_D is updated.
+#
+# Order is: target temp, update rate (s)
 Temp_P: /tmp/Track_Cam/PTEMP.im.shm,double
