Changing shm file names, added field for mmap
changing file extension from .im.shm to .shm

Also took NPS commands out of FEU_TTM_Control so we can use it with the current setup

--- a/devices/FEU_TTM/FEU_TTM.ini
+++ b/devices/FEU_TTM/FEU_TTM.ini
@@ -28,23 +28,24 @@ max_2: 10000.
 
 [Shm_Info]
 # for each of the following, the first element is the path to the shared 
-#   memory and the second is the (numpy) data type in the shared memory
+#   memory, the second is the (numpy) data type in the shared memory,
+#   the third is whether to mmap this shm
 #
 # The directory path below is made in FEU_TTM_Control, so change that file if
 #   changing location of shms.
 
 # NOTE: float16 might work, need to check precision of encoder
 # Shared memory to store the current positiom
-Pos_D:  /tmp/FEU_TTM/POSD.im.shm,float32
+Pos_D:  /tmp/FEU_TTM/POSD.shm,float32,1
 # NOTE: float16 might work, need to check precision of encoder
 # Shared memory to store the target position
-Pos_P:  /tmp/FEU_TTM/POSP.im.shm,float32
+Pos_P:  /tmp/FEU_TTM/POSP.shm,float32,1
 # Shared memory to store the current status
-Stat_D: /tmp/FEU_TTM/STATUSD.im.shm,int8
+Stat_D: /tmp/FEU_TTM/STATUSD.shm,int8,0
 # Shared memory to store the target status
-Stat_P: /tmp/FEU_TTM/STATUSP.im.shm,int8
+Stat_P: /tmp/FEU_TTM/STATUSP.shm,int8,0
 # Shared memory to store any error that arises
-Error:  /tmp/FEU_TTM/ERROR.im.shm,int8
+Error:  /tmp/FEU_TTM/ERROR.shm,int8,0
 
 # To get the size of a shared memory, look here and split by ","
 [Shm_Init]
