--- a/devices/FEU_TTM/FEU_TTM.ini
+++ b/devices/FEU_TTM/FEU_TTM.ini
@@ -8,6 +8,10 @@
 [Communication]
 # Default location to store TTM debug file
 debug_log:  /nfiudata/LOGS/FEU_TTM.log
+# Telnet ip to connect to
+address:    nspecterm
+# Telnet port to connect to
+port:       10007 
 
 [Environment]
 # Command to start control script
@@ -17,14 +21,15 @@ start_command: tmux new -d -s FEU_TTM|FEU_TTM_Control
 end_command:   tmux kill-ses -t FEU_TTM
 
 [Limits]
+# Stage reports limits as [-.76, .76]
 # Axis 1 lower limit
-min_1: 0.
+min_1: -.75
 # Axis 1 higher limit
-max_1: 10000.
+max_1: .75
 # Axis 2 lower limit
-min_2: 0.
+min_2: -.75
 # Axis 2 higher limit
-max_2: 10000.
+max_2: .75
 
 [Shm_Info]
 # for each of the following, the first element is the path to the shared 
@@ -54,7 +59,7 @@ Error:  /tmp/FEU_TTM/ERROR.shm,int8,0
 Pos_D:  -5000.,-5000.
 # pos, pos
 # The center of the TTM's range
-Pos_P:  5000.,5000.
+Pos_P:  -5000.,-5000.
 # 2 = moving // 1 = all (stage & script) on // 0 = stage off
 #    -1 = script dead // -2 = all off 
 Stat_D: 2
