--- a/devices/FIU_TTM/Makefile
+++ b/devices/FIU_TTM/Makefile
@@ -4,7 +4,7 @@ override SYSNAM = kss/nirspec/nsfiu/devices/FIU_TTM
 override VERNUM = 1.0
 
 # If I knew that code would not work with Python 2 I would:
-##override ENABLE_PYTHON2 = False
+override ENABLE_PYTHON2 = False
 ## DIRS = designer
 
 RELLIB = FIU_TTM_cmds.py
