--- a/devices/Mode_Change/Makefile
+++ b/devices/Mode_Change/Makefile
@@ -4,7 +4,7 @@ override SYSNAM = kss/nirspec/nsfiu/devices/Mode_Change
 override VERNUM = 1.0
 
 # If I knew that code would not work with Python 2 I would:
-##override ENABLE_PYTHON2 = False
+override ENABLE_PYTHON2 = False
 ## DIRS = designer
 
 RELLIB = Mode_Change_cmds.py
