--- a/devices/Bundle/Bundle.ini
+++ b/devices/Bundle/Bundle.ini
@@ -20,25 +20,26 @@ min_2: 0
 max_2: 10.3
 # Focus axis limits
 min_3: 0
-max_3: 15.5
+max_3: 14
 
 [Shm_Info]
 # for each of the following, the first element is the path to the shared
-#   memory and the second is the (numpy) data type in the shared memory
+#   memory, the second is the (numpy) data type in the shared memory,
+#   the third is whether the shm should be mmapped
 #
 # The directory path below is made in Bundle_Zaber_Control, so change that file
 #   if changing location of shms.
 
 # Shared memory to store the current position (mm)
-Pos_D:  /tmp/BUNDLE/POSD.im.shm,float32
+Pos_D:  /tmp/BUNDLE/POSD.shm,float32,1
 # Shared memory to store the target position (mm)
-Pos_P:  /tmp/BUNDLE/POSP.im.shm,float32
+Pos_P:  /tmp/BUNDLE/POSP.shm,float32,1
 # Shared memory to store the current status
-Stat_D: /tmp/BUNDLE/STATUSD.im.shm,int8
+Stat_D: /tmp/BUNDLE/STATUSD.shm,int8,0
 # Shared memory to store the target status
-Stat_P: /tmp/BUNDLE/STATUSP.im.shm,int8
+Stat_P: /tmp/BUNDLE/STATUSP.shm,int8,0
 # Shared memory to store any error that arises
-Error:  /tmp/BUNDLE/ERROR.im.shm,uint16
+Error:  /tmp/BUNDLE/ERROR.shm,uint16,0
 
 # To get the size of shared memory, look here and split by ","
 [Shm_Init]
@@ -47,14 +48,15 @@ Error:  /tmp/BUNDLE/ERROR.im.shm,uint16
 Pos_D:  -5000.,-5000.,-5000.
 # pos, pos, pos (in mm)
 # The center of the Zabers' range
-Pos_P: 7,5.15,7.75
-# for 1, 2, 3, and 4, both device and script are on.
-# AS = anti-sticktion, AB = anti-backlash
-#    4 = AB off // 3 = AB & AS off // 2 = AS off // 1 = all on
-#    0 = stage off // -1 = script dead // -2 = all off
+Pos_P: 7,5.15,7
+# Status is represented in 4 bits
+#    bit 0 (LSB) = script status  (1 = alive, 0 = off)
+#    bit 1       = device status  (1 = on, 0 = off)
+#    bit 2       = anti-backlash  (1 = on, 0 = off)
+#    bit 3       = anti-sticktion (1 = on, 0 = off)
+#    bit 4       = homed          (1 = on, 0 = off)
 Stat_D: 1
-# 1 = device on // 0 = device off // -1 = not homed // -2 = anti-sticktion
-#    off // -3 = anti-sticktion and anti-backlash off // -4 anti-backlash off
+# Stat_P as Stat_D above.
 Stat_P: 1
 # 0 = no error // 3 = device not homed //  other error values can be found at:
 #    https://www.zaber.com/wiki/Manuals/Binary_Protocol_Manual#Error_Codes 
