--- a/devices/Bundle/Bundle.ini
+++ b/devices/Bundle/Bundle.ini
@@ -8,8 +8,17 @@
 [Communication]
 # Default location to store Bundle debug file
 debug_log: /nfiudata/LOGS/Bundle.log
+# Telnet ip to connect to
+address:   nspecterm
+# Telnet port to connect to
+port:      10008 
 
 [Environment]
+# Command to start control script
+# to use with Popen: split by "|" and then split beginning by " "
+start_command: tmux new -d -s Bundle|Bundle_Control
+# Command to end control script
+end_command:   tmux kill-ses -t FEU_TTM
 
 [Limits]
 # X axis limits
