--- a/devices/NPS/NPS.ini
+++ b/devices/NPS/NPS.ini
@@ -10,20 +10,37 @@ model:      IPC34XX
 address:    k2consoles-8
 port:       2004
 
+[Shm Info]
+# For each of the follwing, 
+#   the first element is the path to the shared memory,
+#   the second is the (numpy) data type in the shared memory, 
+#   the third is whether this shared memory should be mmapped 
+#       NOTE: (mmapping makes get and set faster but takes up extra mem)
+#   the fourth is which port is associated with the given stage
+
+Track_Cam:   /tmp/NPS/TC.im.shm,uint8,0
+Mode_Change: /tmp/NPS/MC.im.shm,uint8,0
+Met:         /tmp/NPS/MET.im.shm,uint8,0
+FIU_TTM:     /tmp/NPS/FIU_TTM.im.shm,uint8,0
+
 [Ports]
+# For each of the following:
+#   the first element is the shm attached the given port
+#   the second is a description of what is connected to the port
+
 # C-RED2 camera
-1: Tracking Camera
+1: Track_Cam,Tracking Camera
 # Conex controller
-2: TC mode stage
+2: Mode_Change,TC mode stage
 # mid-IR light source
-3: FEU CF source
+3: ,FEU CF source
 # 1550 nm laser
-4: FIU CF source
+4: ,FIU CF source
 # Temporary FEU 
-5: Not connected
+5: ,Not connected
 # Labjack + 2 photodiodes
-6: Not connected
+6: ,Not connected
 # Environmental monitoring
-7: Env. sensors
+7: Met,Env. sensors
 # E-727 Tip Tilt mirror controller
-8: FIU TTM
+8: FIU_TTM,FIU TTM
