--- a/devices/Q545/Makefile
+++ b/devices/Q545/Makefile
@@ -1,12 +1,18 @@
-# NIRSPEC fiber injection unit. Build device support (python) scripts
+# NIRSPEC fiber injection unit. Build tip-tilt mirror
 
-override SYSNAM = kss/nirspec/nsfiu/devices/support/Python
+override SYSNAM = kss/nirspec/nsfiu/devices/FIU_TTM
 override VERNUM = 1.0
 
+# If I knew that code would not work with Python 2 I would:
 override ENABLE_PYTHON2 = False
+## DIRS = designer
 
-RELLIB = dev_Exceptions.py KPIC_shmlib.py Conex.py
+RELLIB = FIU_TTM_cmds.py
+RELBIN = FIU_TTM FIU_TTM_Control FIU_TTM_draw
+RELDAT = FIU_TTM.ini
 LIBSUB = python
+##FILES = $(RELBIN)
+
 
 ################################################################################
 # KROOT boilerplate:
