add low-level library for PyWFS

--- a/devices/Mode_Change/Mode_Change.ini
+++ b/devices/Mode_Change/Mode_Change.ini
@@ -6,7 +6,7 @@
 # are added, scripts may break (as no strip is applied to this data)
 
 [Communication]
-# Default location to store TTM debug file
+# Default location to store debug file
 debug_log:  /nfiudata/LOGS/Mode_change.log
 
 [Environment]
