Added serial support to Conex library

--- a/devices/PyWFS/PyWFS.ini
+++ b/devices/PyWFS/PyWFS.ini
@@ -9,9 +9,9 @@
 # Default location to store debug file
 debug_log:  /nfiudata/LOGS/PyWFS.log
 # address of the device
-address:
+devnm:
 # port for the device
-port:
+baud:
 
 [Environment]
 # Command to start control script
