Testing for Q545 stages
Fixed some bugs in Q545 stage scripts.

Also added a script to fake NPS control on AOSE

--- a/devices/Coronagraph/Coronagraph.ini
+++ b/devices/Coronagraph/Coronagraph.ini
@@ -60,5 +60,6 @@ Stat_P: /tmp/Coronagraph/STATUSP.im.shm,uint8,0
 # Shared memory to store any error that arises
 #
 # Error codes:
-#   0 = No Error // 1 = gcserror // 2 = Unreferenced movement // 3 = movement limit
+#   0 = No Error // 1 = gcserror // 2 = Unreferenced movement // 3 = movement limit //
+#   4 = Device not connected
 Error:  /tmp/Coronagraph/ERROR.im.shm,uint8,0
