--- a/devices/TCP/TCP.ini
+++ b/devices/TCP/TCP.ini
@@ -1,6 +1,6 @@
 
 #
-# KPIC FIU PI PIAA initialization file
+# KPIC FIU Tracking Camera Pickoff initialization file
 #
 #
 # WARNING: the lack of spaces between commas is a functional choice. If spaces
@@ -8,18 +8,19 @@
 
 [Communication]
 # Default location to store debug file
-debug_log:  /nfiudata/LOGS/PIAA.log
+debug_log:  /nfiudata/LOGS/TCP.log
 
 [Environment]
 # Command to start control script
 # to use with Popen: split by "|" and then split beginning by " "
-start_command: tmux new -d -s PIAA|PIAA_Control
+start_command: tmux new -d -s TCP|TCP_Control
 # Command to end control script
-end_command:   tmux kill-ses -t PIAA
+end_command:   tmux kill-ses -t TCP
 
 [Presets]
-in:   13.
-out:  -13.
+mir_1:   13.
+mir_2:  -13.
+mir_3:   0.
 
 [Limits]
 # lower limit
@@ -32,29 +33,28 @@ max: 13.
 #   memory, the second is the (numpy) data type in the shared memory,
 #   and the third is whether the shm is mmapped
 #
-# The directory path below is made in PIAA_Control, so change that file if
+# The directory path below is made in TCP_Control, so change that file if
 #   changing location of shms.
 
 # NOTE: float16 might work, need to check precision of encoder
 # Shared memory to store the current positiom
-Pos_D:  /tmp/PIAA/POSD.im.shm,float32,1
+Pos_D:  /tmp/TCP/POSD.im.shm,float32,1
 # NOTE: float16 might work, need to check precision of encoder
 # Shared memory to store the target position
-Pos_P:  /tmp/PIAA/POSP.im.shm,float32,1
+Pos_P:  /tmp/TCP/POSP.im.shm,float32,1
 # Shared memory to store the current status
 #
 # Information is stored in bits as followed:
 #   bit 0 (LSB) : script status (1 = alive, 0 = off)
 #   bit 1       : device power  (1 = on, 0 = off)
 #   bit 2       : device state  (1 = loop closed & homed, 0 = loop open)
-Stat_D: /tmp/PIAA/STATUSD.im.shm,uint8,0
+Stat_D: /tmp/TCP/STATUSD.im.shm,uint8,0
 # Shared memory to store the target status
 #
 # Information stored as in Stat_D
-Stat_P: /tmp/PIAA/STATUSP.im.shm,uint8,0
+Stat_P: /tmp/TCP/STATUSP.im.shm,uint8,0
 # Shared memory to store any error that arises
 #
 # Error codes:
-#   0 = No Error // 1 = gcserror // 2 = Unreferenced movement // 3 = movement limit //
-#   4 = Device not connected
-Error:  /tmp/PIAA/ERROR.im.shm,uint8,0
+#   0 = No Error // 1 = gcserror // 2 = Unreferenced movement // 3 = movement limit
+Error:  /tmp/TCP/ERROR.im.shm,uint8,0
