--- a/devices/PIAA/PIAA.ini
+++ b/devices/PIAA/PIAA.ini
@@ -37,24 +37,24 @@ max: 13.
 
 # NOTE: float16 might work, need to check precision of encoder
 # Shared memory to store the current positiom
-Pos_D:  /tmp/PIAA/POSD.im.shm,float32,1
+Pos_D:  /tmp/PIAA/POSD.shm,float32,1
 # NOTE: float16 might work, need to check precision of encoder
 # Shared memory to store the target position
-Pos_P:  /tmp/PIAA/POSP.im.shm,float32,1
+Pos_P:  /tmp/PIAA/POSP.shm,float32,1
 # Shared memory to store the current status
 #
 # Information is stored in bits as followed:
 #   bit 0 (LSB) : script status (1 = alive, 0 = off)
 #   bit 1       : device power  (1 = on, 0 = off)
 #   bit 2       : device state  (1 = loop closed & homed, 0 = loop open)
-Stat_D: /tmp/PIAA/STATUSD.im.shm,uint8,0
+Stat_D: /tmp/PIAA/STATUSD.shm,uint8,0
 # Shared memory to store the target status
 #
 # Information stored as in Stat_D
-Stat_P: /tmp/PIAA/STATUSP.im.shm,uint8,0
+Stat_P: /tmp/PIAA/STATUSP.shm,uint8,0
 # Shared memory to store any error that arises
 #
 # Error codes:
 #   0 = No Error // 1 = gcserror // 2 = Unreferenced movement // 3 = movement limit //
 #   4 = Device not connected
-Error:  /tmp/PIAA/ERROR.im.shm,uint8,0
+Error:  /tmp/PIAA/ERROR.shm,uint8,0
