--- a/devices/PyWFS/PyWFS.ini
+++ b/devices/PyWFS/PyWFS.ini
@@ -9,7 +9,7 @@
 # Default location to store debug file
 debug_log:  /nfiudata/LOGS/PyWFS.log
 # address of the device
-devnm:
+devnm: ttyUSB1
 # port for the device
 baud:
 
