Added baud, fixed status setting
Added baud rate based on https://drive.google.com/file/d/1uMdbrEobR7yNgBIWzCawko2L_2UZz954/view and changed the way that status is set.

--- a/devices/PyWFS/PyWFS.ini
+++ b/devices/PyWFS/PyWFS.ini
@@ -11,7 +11,7 @@ debug_log:  /nfiudata/LOGS/PyWFS.log
 # address of the device
 devnm: ttyUSB1
 # port for the device
-baud:
+baud: 921600
 
 [Environment]
 # Command to start control script
