Small PyWFS bug fixes
Began testing PyWFS library on AOSE

--- a/devices/PyWFS/PyWFS.ini
+++ b/devices/PyWFS/PyWFS.ini
@@ -41,22 +41,22 @@ max_1: 340.
 #   if changing location of shms.
 
 # Shared memory to store the current positiom
-Pos_D:  /tmp/Mode_Change/POSD.im.shm,float16,1
+Pos_D:  /tmp/PyWFS/POSD.shm,float32,1
 # Shared memory to store the target position
-Pos_P:  /tmp/Mode_Change/POSP.im.shm,float16,1
+Pos_P:  /tmp/PyWFS/POSP.shm,float32,1
 # Shared memory to store the current status
 #
 # Status is represented by bits as follows:
 #    bit 0 (LSB): Script status (0 = off, 1 = alive)
 #    bit 1      : Device status (0 = off, 1 = on)
 #    bit 2      : Referenced    (0 = not referenced, 1 = ready)
-Stat_D: /tmp/Mode_Change/STATUSD.im.shm,uint8,0
+Stat_D: /tmp/PyWFS/STATUSD.shm,uint8,0
 # Shared memory to store the target status. Bits defined as in Stat_D
-Stat_P: /tmp/Mode_Change/STATUSP.im.shm,uint8,0
+Stat_P: /tmp/PyWFS/STATUSP.shm,uint8,0
 # Shared memory to store any error that arises
 #
 # Error codes
 #   1 = Motion Range //
 # Negative error is a Conex error code. To decode, multiply by -1, add 64,
 #   and convert to ascii
-Error:  /tmp/Mode_Change/ERROR.im.shm,int8,0
+Error:  /tmp/PyWFS/ERROR.shm,int8,0
