Minor bug fixes based on testing
Fixed some minor bugs while testing PyWFS

--- a/devices/PyWFS/PyWFS.ini
+++ b/devices/PyWFS/PyWFS.ini
@@ -9,7 +9,7 @@
 # Default location to store debug file
 debug_log:  /nfiudata/LOGS/PyWFS.log
 # address of the device
-devnm: ttyUSB1
+devnm: /dev/ttyUSB1
 # port for the device
 baud: 921600
 
