Added TCP module

--- a/devices/TCP/TCP.ini
+++ b/devices/TCP/TCP.ini
@@ -38,23 +38,23 @@ max: 13.
 
 # NOTE: float16 might work, need to check precision of encoder
 # Shared memory to store the current positiom
-Pos_D:  /tmp/TCP/POSD.im.shm,float32,1
+Pos_D:  /tmp/TCP/POSD.shm,float32,1
 # NOTE: float16 might work, need to check precision of encoder
 # Shared memory to store the target position
-Pos_P:  /tmp/TCP/POSP.im.shm,float32,1
+Pos_P:  /tmp/TCP/POSP.shm,float32,1
 # Shared memory to store the current status
 #
 # Information is stored in bits as followed:
 #   bit 0 (LSB) : script status (1 = alive, 0 = off)
 #   bit 1       : device power  (1 = on, 0 = off)
 #   bit 2       : device state  (1 = loop closed & homed, 0 = loop open)
-Stat_D: /tmp/TCP/STATUSD.im.shm,uint8,0
+Stat_D: /tmp/TCP/STATUSD.shm,uint8,0
 # Shared memory to store the target status
 #
 # Information stored as in Stat_D
-Stat_P: /tmp/TCP/STATUSP.im.shm,uint8,0
+Stat_P: /tmp/TCP/STATUSP.shm,uint8,0
 # Shared memory to store any error that arises
 #
 # Error codes:
 #   0 = No Error // 1 = gcserror // 2 = Unreferenced movement // 3 = movement limit
-Error:  /tmp/TCP/ERROR.im.shm,uint8,0
+Error:  /tmp/TCP/ERROR.shm,uint8,0
