Minor changes to Start commands, NPS progress

--- a/devices/NPS/NPS.ini
+++ b/devices/NPS/NPS.ini
@@ -10,18 +10,23 @@ model:      IPC34XX
 address:    k2consoles-8
 port:       2004
 
+[Evironment]
+# TODO: add start and end commands 
+
 [Shm Info]
 # For each of the follwing, 
 #   the first element is the path to the shared memory,
 #   the second is the (numpy) data type in the shared memory, 
 #   the third is whether this shared memory should be mmapped 
 #       NOTE: (mmapping makes get and set faster but takes up extra mem)
-#   the fourth is which port is associated with the given stage
 
-Track_Cam:   /tmp/NPS/TC.im.shm,uint8,0
-Mode_Change: /tmp/NPS/MC.im.shm,uint8,0
-Met:         /tmp/NPS/MET.im.shm,uint8,0
-FIU_TTM:     /tmp/NPS/FIU_TTM.im.shm,uint8,0
+# for all shms, bit 0 (LSB) is the state (current) bit, 
+#   bit 1 is the command (target) bit, where 1 is on, 0 is off
+#   bit 2 can be set to 1 to update without taking any action
+Track_Cam:   /tmp/NPS/TC.shm,uint8,0
+Mode_Change: /tmp/NPS/MC.shm,uint8,0
+Met:         /tmp/NPS/MET.shm,uint8,0
+FIU_TTM:     /tmp/NPS/FIU_TTM.shm,uint8,0
 
 [Ports]
 # For each of the following:
