--- a/devices/PyWFS/PyWFS.ini
+++ b/devices/PyWFS/PyWFS.ini
@@ -16,7 +16,7 @@ baud: 921600
 [Environment]
 # Command to start control script
 # to use with Popen: split by "|" and then split beginning by " "
-start_command: tmux new -d -s PyWFS|PyWFS_Control
+start_command: tmux new -d -s PyWFS|tmux send-keys -t PyWFS "PyWFS_Control" Enter
 # Command to end control script
 end_command:   tmux kill-ses -t PyWFS
 
