--- a/devices/TCP/TCP.ini
+++ b/devices/TCP/TCP.ini
@@ -12,21 +12,21 @@ debug_log:  /nfiudata/LOGS/TCP.log
 
 [Environment]
 # Command to start control script
-# to use with Popen: split by "|" and then split beginning by " "
-start_command: tmux new -d -s TCP|TCP_Control
+# to use with Popen: split by "|" and then split by " "
+start_command: tmux new -d -s TCP|tmux send-keys -t TCP "TCP_Control" Enter
 # Command to end control script
 end_command:   tmux kill-ses -t TCP
 
 [Presets]
-mir_1:   13.
-mir_2:  -13.
+mir_1:   26.
+mir_2:  -26.
 mir_3:   0.
 
 [Limits]
 # lower limit
-min: -13.
+min: -26.
 # upper limit
-max: 13.
+max: 26.
 
 [Shm Info]
 # for each of the following, the first element is the path to the shared 
