--- a/devices/Coronagraph/Coronagraph.ini
+++ b/devices/Coronagraph/Coronagraph.ini
@@ -12,8 +12,8 @@ debug_log:  /nfiudata/LOGS/Coronagraph.log
 
 [Environment]
 # Command to start control script
-# to use with Popen: split by "|" and then split beginning by " "
-start_command: tmux new -d -s Coronagraph|Coronagraph_Control
+# to use with Popen: split by "|" and then split by " "
+start_command: tmux new -d -s Coronagraph|tmux send-keys -t Coronagraph "Coronagraph_Control" Enter
 # Command to end control script
 end_command:   tmux kill-ses -t Coronagraph
 
