--- a/devices/PIAA/PIAA.ini
+++ b/devices/PIAA/PIAA.ini
@@ -12,8 +12,8 @@ debug_log:  /nfiudata/LOGS/PIAA.log
 
 [Environment]
 # Command to start control script
-# to use with Popen: split by "|" and then split beginning by " "
-start_command: tmux new -d -s PIAA|PIAA_Control
+# to use with Popen: split by "|" and then split by " "
+start_command: tmux new -d -s PIAA|tmux send-keys -t PIAA "PIAA_Control" Enter
 # Command to end control script
 end_command:   tmux kill-ses -t PIAA
 
