Moved old NPS cmds to NPS_port, new NPS to test

--- a/devices/NPS/NPS.ini
+++ b/devices/NPS/NPS.ini
@@ -10,8 +10,13 @@ model:      IPC34XX
 address:    k2consoles-8
 port:       2004
 
-[Evironment]
-# TODO: add start and end commands 
+[Environment]
+# Command to start control script
+# to use with Popen: split by "|" and then split by " "
+start_command: tmux new -d -s NPS|tmux send-keys -t NPS "NPS_Control" Enter
+# Command to end control script
+end_command:   tmux kill-ses -t NPS
+
 
 [Shm Info]
 # For each of the follwing, 
