Modified shm layout for NPS

--- a/devices/NPS/NPS.ini
+++ b/devices/NPS/NPS.ini
@@ -25,32 +25,22 @@ end_command:   tmux kill-ses -t NPS
 #   the third is whether this shared memory should be mmapped 
 #       NOTE: (mmapping makes get and set faster but takes up extra mem)
 
-# for all shms, bit 0 (LSB) is the state (current) bit, 
-#   bit 1 is the command (target) bit, where 1 is on, 0 is off
-#   bit 2 can be set to 1 to update without taking any action
-Track_Cam:   /tmp/NPS/TC.shm,uint8,0
-Mode_Change: /tmp/NPS/MC.shm,uint8,0
-Met:         /tmp/NPS/MET.shm,uint8,0
-FIU_TTM:     /tmp/NPS/FIU_TTM.shm,uint8,0
+# bit number cooresponds to port (port 8 is the LSB)
+#   0 is off, 1 is on
+
+P_Shm:   /tmp/NPS/PORTSP.shm,uint8,0
+D_Shm: /tmp/NPS/PORTSD.shm,uint8,0
 
 [Ports]
-# For each of the following:
-#   the first element is the shm attached the given port
-#   the second is a description of what is connected to the port
+# comma separated list. 
+#   First element is the device name, 
+#   second is a description of the device
 
-# C-RED2 camera
-1: Track_Cam,Tracking Camera
-# Conex controller
-2: Mode_Change,TC mode stage
-# mid-IR light source
-3: ,FEU CF source
-# 1550 nm laser
-4: ,FIU CF source
-# Temporary FEU 
-5: ,Not connected
-# Labjack + 2 photodiodes
-6: ,Not connected
-# Environmental monitoring
-7: Met,Env. sensors
-# E-727 Tip Tilt mirror controller
-8: FIU_TTM,FIU TTM
+1: Tracking Camera,C-RED2 camera
+2: TC mode stage,Conex controller for display mode
+3: FEU CF source,mid-IR light source
+4: FIU CF source,1550 nm laser
+5: Not connected,Temporary FEU
+6: Not connected,Labjack + 2 photodiodes
+7: Env. sensors,Environmental monitoring
+8: FIU TTM,E-727 Tip Tilt mirror controller
